# test_cnn

./: CMakeLists.txt  CMakeSettings.json  Compilation.bat  README.txt  Rapport.docx  requirements.txt
include/: CNN_Project.h
python/: module_TI.py  setup.py
src/: CNN_Project.cpp
